# FastApiPython

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: sonar-project.properties
.github/workflows/: build.yml  docker-build-push.yml  docker-trivy-sonarcloud.yml  docker-trivy.yml  sonar-project.properties  trivy-scan.yml
my-fast-api/: Chart.yaml  values.yaml
my-fast-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
my-fast-api/templates/tests/: test-connection.yaml
my-python-api/: Chart.yaml  values.yaml
my-python-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
my-python-api/templates/tests/: test-connection.yaml
projeto_compass/: app.py
