[tool.poetry]
name = "projeto-compass"
version = "0.1.0"
description = ""
authors = ["BrunoVital <bruvital2010@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
